set priority sms url

--- a/Core/settings/bsim/mce.properties
+++ b/Core/settings/bsim/mce.properties
@@ -148,7 +148,7 @@ zenziva.sms.passkey=dimomantabsepanjangmasa
 #
 
 #Simaspay SMS Properties
-
+simaspay.sms.priority.http.url=http://uat.banksinarmas.com/SmsAlert/app/sendSmsPost
 simaspay.sms.http.url=http://uat.banksinarmas.com/SmsAlert/app/sendSmsPost
 simaspay.sms.systemId=SIMASPAY
 simaspay.sms.msgId=123456
