--- a/GTBank/BillPayments/pom.xml
+++ b/GTBank/BillPayments/pom.xml
@@ -73,7 +73,7 @@
 					</instructions>
 				</configuration>
 			</plugin>
-			<plugin>
+			<!--<plugin>
 				<groupId>org.apache.cxf</groupId>
 				<artifactId>cxf-codegen-plugin</artifactId>
 				<version>2.2.10</version>
@@ -99,7 +99,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin> -->
 		</plugins>
 	</build>
 </project>
