--- a/build.xml
+++ b/build.xml
@@ -27,7 +27,7 @@
         </condition>
 
 	<target name="if_windows" if="isWindows">
-		<property name="mvn.exe" value="mvn.bat" />
+		<property name="mvn.exe" value="mvn.cmd" />
 		
 	</target>
 	<target name="if_unix" if="isUnix" >
